--- a/service/config-server/src/main/resources/configurations/customer-service.yml
+++ b/service/config-server/src/main/resources/configurations/customer-service.yml
@@ -1,8 +1,8 @@
 spring:
   data:
     mongodb:
-      username: ${MONGODB_USERNAME}
-      password: ${MONGODB_PASSWORD}
+      username: ${MONGO_INITDB_ROOT_USERNAME}
+      password: ${MONGO_INITDB_ROOT_PASSWORD}
       host: localhost
       port: 27017
       database: customer
