--- a/service/config-server/src/main/resources/configurations/notification-service.yml
+++ b/service/config-server/src/main/resources/configurations/notification-service.yml
@@ -5,16 +5,16 @@ spring:
       password: ${MONGO_INITDB_ROOT_PASSWORD}
       host: localhost
       port: 27017
-      database: customer
+      database: notification
       authentication-database: admin
   kafka:
     consumer:
       bootstrap-servers: localhost:9092
-      key-deserializer: org.apache.kafka.common.serialization.StringSerializer
-      value-deserializer: org.springframework.kafka.support.serializer.JsonSerializer
+      key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
         spring.json.trusted.packages: "*"
-        spring.json.type.mapping: orderConfirmation:com.hu6r1s.order.kafka.OrderConfirmation, paymentConfirmation:com.hu6r1s.payment.notification.PaymentNotificationRequest
+        spring.json.type.mapping: orderConfirmation:com.hu6r1s.notification.kafka.order.OrderConfirmation, paymentConfirmation:com.hu6r1s.notification.kafka.payment.PaymentConfirmation
       group-id: paymentGroup, orderGroup
       auto-offset-reset: earliest
   mail:
